--- a/_posts/2020-01-01-the-us-narrative-today.html
+++ b/_posts/2020-01-01-the-us-narrative-today.html
@@ -1797,107 +1797,107 @@ stories:
   domain: http://www.statesmanexaminer.com/
   link: https://www.statesmanexaminer.com/content/colville-chamber-commerce-hold-home-holidays-event
 images:
-- name: capital-battle-capitolbattle-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dark-dali.jpg
-- name: berlinwall2-berlinwall-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-dark-dali.jpg
-- name: nazi-invasion-surveillance-cameras_36343058400_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-surveillance-cameras_36343058400_o.jpg
-- name: copper-circuit-creepy-doll-looking-down.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-creepy-doll-looking-down.jpg
-- name: eduardo-eduardo-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-light-dali.jpg
-- name: oldcabin-store-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-deep-connections.jpg
-- name: abe-lincoln-one-rainbow-festival-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-rainbow-festival-file-00-00-07-91.jpg
-- name: powerlines-power-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-kandinsky-bv.jpg
-- name: udnie-IMG_4746.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4746.jpg
-- name: catacombs-catacombs-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-clean-view.jpg
-- name: bf-skinner-small-lighthouse_36556509232_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-small-lighthouse_36556509232_o.jpg
-- name: castle-wall-DSC-0067-copper-circuit-2.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-copper-circuit-2.JPG
-- name: old-church-oldchurch-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-kand-two.jpg
-- name: power-lines-power-lines-empty-space-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dark-soul.jpg
-- name: walled-garden-walled-garden-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-smooth-ride.jpg
-- name: subway-subway-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-emily-carr.jpg
-- name: oldhouse-granaryfield-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-dry-skin.jpg
-- name: windowmountain-window-mountain-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-matrix.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-cinnamon-rolls.jpg
-- name: ellis-island-ellisisland-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dark-rain.jpg
-- name: white-house-lawn-white-house-lawn-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-internet-numbers.jpg
-- name: windowmountain-window-mountain-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-internet-numbers.jpg
-- name: aws-s3-stories-new-69-120-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-69-120-800-500-0-max-0-1--1.jpg
-- name: bf-skinner-surveillance-cameras_36343058400_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-surveillance-cameras_36343058400_o.jpg
-- name: bf-skinner-docks-water-front-ships-containers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-docks-water-front-ships-containers.jpg
-- name: server-cloud-server-racks-clouds-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dali-three.jpg
-- name: gypsy-wagon-gypsywagon-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-ww2-color.jpg
-- name: death-valley-death-valley-national-park-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-neo-instinct.jpg
-- name: adam-smith-adam-smith-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-atari-missle.jpg
-- name: white-house-lawn-white-house-window-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-space-pizza.jpg
-- name: aws-s3-square-C3JdRtDWMAUqS6L-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C3JdRtDWMAUqS6L-square.jpg
-- name: wind-mills-windmills-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-blue-brush.jpg
-- name: white-house-lawn-white-house-lawn-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-wols.jpg
-- name: old-school-house-old-schoolhouse-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-feed-people.jpg
-- name: carry-load-carryload-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-blue-circuit.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
-- name: art-museum-art-museum-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-aqua.jpg
-- name: bf-skinner-cemetery_35902984304_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-cemetery_35902984304_o.jpg
-- name: wind-mills-windmills-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-crafty-painting.jpg
-- name: cargo-ship-cargo-ship-on-sea-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-graham-sutherland.jpg
-- name: old-granary-field-oldhouse-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-satan-red.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-creativity.jpg
-- name: status-berlin-status-berlin-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dali-three.jpg
-- name: power-lines-power-lines-empty-space-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-purple-pond.jpg
-- name: old-school-house-old-schoolhouse-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-crafty-painting.jpg
-- name: stalin-time-desktop-laptop-chair.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-desktop-laptop-chair.jpg
-- name: old-school-house-old-schoolhouse-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-circuit-4.jpg
-- name: aws-s3-stories-capital-battle-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-capital-battle-internet-numbers.jpg
-- name: berlinwall2-berlinwall-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-purple-storm.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-circuit.jpg
-- name: copper-circuit-old-building-seattle-clouds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-building-seattle-clouds.jpg
+- name: meadowbutterfly-meadow-butterfly-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-blue-electricity.jpg
+- name: nazi-invasion-new-york-city-skyline_36655833162_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-new-york-city-skyline_36655833162_o.jpg
+- name: locked-up-steam-lock-up-steam-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-granite.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-jap-dys-1.jpg
+- name: power-lines-power-lines-empty-space-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-creativity.jpg
+- name: school-clouds-church-clouds-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-horiz-circuit.jpg
+- name: store-on-corner-store-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-smooth-ride.jpg
+- name: abe-lincoln-one-plentiful-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-plentiful-file-00-00-15-87.jpg
+- name: oldcabin-store-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-plentiful.jpg
+- name: old-gas-pumps-oldgaspumps-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-nazi-poster.jpg
+- name: fence-mexico-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-really-hot.jpg
+- name: berlinwall-DSC-0084-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-post-modern.jpg
+- name: old-cabin-oldcabin-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-dark-soul.jpg
+- name: legal-statue-legalstatue-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-rainbow-festival.jpg
+- name: braceros-domingo-ulloa-dark-hallway-in-hotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-dark-hallway-in-hotel.jpg
+- name: oldroad-old-road-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-green-zuma.jpg
+- name: old-gas-pumps-oldgaspumps-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-mucha-mult.jpg
+- name: beach-clouds-lifeguard-beachclouds-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-purp-paper.jpg
+- name: trucksilo-trucksilo-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dark-rain.jpg
+- name: yosemite-yosemite-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-umberto-bocc.jpg
+- name: carry-load-carryload-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-creativity.jpg
+- name: white-house-lawn-white-house-window-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dali-two.jpg
+- name: la-muse-downtown-la_36349151230_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-downtown-la_36349151230_o.jpg
+- name: cargo-ship-cargo-ship-on-sea-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-china-prop.jpg
+- name: meadowbutterfly-meadow-butterfly-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-blue-brush.jpg
+- name: border-fence-border-fence-on-hill-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-deep-connections.jpg
+- name: ellis-island-ellis-island-room-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-nazi-poster.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-ww2-color.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-ww2-color.JPG
+- name: white-house-lawn-white-house-window-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-satan-red.jpg
+- name: mosaic-face-mosaic-face-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-nazi-poster.jpg
+- name: trucksilo-trucksilo-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-space-pizza.jpg
+- name: store-on-corner-store-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-sunday.jpg
+- name: oldtrain-oldtrain-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-gred-mash.jpg
+- name: nyc-flag-api-conversations-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-alien-goggles.jpg
+- name: meadowbutterfly-meadow-butterfly-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-yellow-collage.jpg
+- name: curtain-curtain-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-blue-granite.jpg
+- name: dragon_close-up-wave.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-wave.jpg
+- name: liberty-back-statue-liberty-back-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-ww2-dresden.jpg
+- name: lincoln-memorial-lincolnmemorial-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-emily-carr.jpg
+- name: old-barn-old-barn-1500-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-diego-rivera1.jpg
+- name: blossombar-blue-brush-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blue-brush-file-00-00-24-99.jpg
+- name: yuma-bank-yuma-bak-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-colorful-blocks.jpg
+- name: blossombar-colorful-blocks-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-colorful-blocks-file-00-00-00-00.jpg
+- name: server-cloud-server-racks-clouds-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-granite.jpg
+- name: school-clouds-church-clouds-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-kandinsky-bv.jpg
+- name: miamibeach-miamibeach-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-dry-skin.jpg
+- name: copper-circuit-subway-underground_35904617894_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-subway-underground_35904617894_o.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-oily-mcoilface.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-oily-mcoilface.png
+- name: oldtrain-oldtrain-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-colored-circuits.jpg
+- name: machine-road-machine-road-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-alberto-giacometti.jpg
+- name: oldcabin-oldcabin-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-plentiful.jpg
 ---
 Nebraska Pig Farmers Pay It Forward.&nbsp;Six Arrested In Prostitution Sting.&nbsp;House Explosion Rattles Parts Of Brownfield.&nbsp;As More Women Run For Office, Child Care Remains A Hurdle.&nbsp;Twenty Fitness Specials To Honor Your New Year's Resolution.&nbsp;Renovations To Hazel Ruby McQuain Park Near Completion.&nbsp;Pancakes And Santa Pic.&nbsp;Bomb Squad Called To Findlay Business For Suspicious Activity.&nbsp;
